@@ -7,14 +7,17 @@ Crash Bandicoot
 - New feature: Enable Unused Enemies
 - New feature: Randomize Level Order
 - New feature: Add Stormy Ascent
+- New feature: Randomize Music Tracks
 
 Crash Bandicoot 2: Cortex Strikes Back
 - New feature: Random/All Crates Are Covered Up
+- New feature: Randomize Music Tracks
 - Randomize World Textures: Fixed not being able to build using this feature
 
 Crash Bandicoot: WARPED
 - New feature: Randomize Level Order
 - New feature: Random/All Crates Are Covered Up
+- New feature: Randomize Music Tracks
 - Randomize World Textures: Fixed not being able to build using this feature
 
 1.3.0
